--- a/src/plugin-macros.h.in
+++ b/src/plugin-macros.h.in
@@ -19,8 +19,8 @@
 #ifndef PLUGINNAME_H
 #define PLUGINNAME_H
 
-#define PLUGIN_NAME "@CMAKE_PROJECT_NAME@"
-#define PLUGIN_VERSION "@CMAKE_PROJECT_VERSION@"
+#define PLUGIN_NAME "@PROJECT_NAME@"
+#define PLUGIN_VERSION "@PROJECT_VERSION@"
 #define ID_PREFIX "@ID_PREFIX@"
 
 #define blog(level, msg, ...) blog(level, "[" PLUGIN_NAME "] " msg, ##__VA_ARGS__)
