Add API to resolve host name in background

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ set(PLUGIN_SOURCES
 	src/vban-output.c
 	src/vban-output-thread.c
 	src/vban-filter.c
+	src/resolve-thread.c
 )
 
 add_library(${PROJECT_NAME} MODULE ${PLUGIN_SOURCES})
