--- a/.github/workflows/clang-format.yml
+++ b/.github/workflows/clang-format.yml
@@ -15,7 +15,7 @@ jobs:
 
     - name: Clang
       run: |
-        sudo apt-get install -y clang-format-12
+        sudo apt-get install -y clang-format
         clang-format -i -fallback-style=none $(git ls-files | grep -v '^vban/' | grep '\.\(c\|h\)$')
 
     - name: Check
